seperated a new function

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container-fluid">
       <!-- search bar -->
       <div class="row justify-content-center align-items-center pads">
-        <div class="col-6">
+        <div class="col-6 d-flex flex-nowrap">
           <input id="cerca" type="text">
           <button id="invia" type="button" class="btn btn-light">Cerca</button>
         </div>
@@ -35,7 +35,7 @@
           <span class="year">{{anno}}</span>
       </div> -->
 
-      <div class="card" style="width: 18rem;">
+      <div class="card" style="width: 20rem;">
           <img src="https://image.tmdb.org/t/p/w500/{{img}}" class="card-img-top" alt="image not found">
           <div class="card-body  d-flex flex-column justify-content-end">
             <h3><span class="title">{{title}}</span></h3>
