--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <!-- search bar -->
       <div class="row justify-content-center align-items-center pads">
         <div class="col-6 d-flex flex-nowrap">
-          <input id="cerca" type="text">
+          <input id="cerca" type="text" placeholder="Titolo film">
           <button id="invia" type="button" class="btn btn-light">Cerca</button>
         </div>
       </div>
