added stars function changed the vote_average in to 5stars

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <ul class="list-unstyled">
               <li>Titolo Originale : {{titleOrg}}</li>
               <li>Lingua : {{lingua}}</li>
-              <li>Voto : {{voto}}</li>
+              <li>Voto : <span class="cGold">{{{voto}}}</span></li>
             </ul>
             <a href="#" class="btn btn-danger">Guarda</a>
           </div>
