--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
       <div class="card" style="width: 20rem;">
           <img src="https://image.tmdb.org/t/p/w500/{{img}}" class="card-img-top" alt="image not found">
           <div class="card-body  d-flex flex-column justify-content-end">
-            <h3><span class="title">{{title}}</span></h3>
+            <h4><span class="title">{{title}}</span></h4>
             <ul class="list-unstyled">
               <li>Titolo Originale : {{titleOrg}}</li>
-              <li>Lingua : {{lingua}}</li>
+              <img src="assets/img/" alt="">
+              <li>Lingua : {{lingua}} <img src="assets/img/{{nazione}}" alt="nazione"></li>
               <li>Voto : <span class="cGold">{{{voto}}}</span></li>
             </ul>
             <a href="#" class="btn btn-danger">Guarda</a>
