--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
           <button id="invia" type="button" class="btn btn-light">Cerca</button>
         </div>
       </div>
+      <h1>Movies</h1>
       <div id="films" class="row justify-content-center pads">
+      </div>
+      <h1>Tv Series</h1>
+      <div id="tvSeries" class="row justify-content-center pads">
       </div>
     </div>
     <!-- template -->
-    <script id="hb-template" type="text/x-handlebars-template">
+    <script id="movies" type="text/x-handlebars-template">
       <!-- <div class='{{classname}} '>
           <img src ='https://image.tmdb.org/t/p/w500/{{img}}' alt=''>
           <h3><span class="title">{{title}}</span></h3>
@@ -41,14 +45,25 @@
             <h4><span class="title">{{title}}</span></h4>
             <ul class="list-unstyled">
               <li>Titolo Originale : {{titleOrg}}</li>
-              <img src="assets/img/" alt="">
               <li>Lingua : {{lingua}} <img src="assets/img/{{nazione}}" alt="nazione"></li>
               <li>Voto : <span class="cGold">{{{voto}}}</span></li>
             </ul>
-            <a href="#" class="btn btn-danger">Guarda</a>
           </div>
         </div>
-  </script>
+    </script>
+    <script id="tvs" type="text/x-handlebars-template">
+      <div class="card" style="width: 20rem;">
+          <img src="https://image.tmdb.org/t/p/w500/{{img}}" class="card-img-top" alt="image not found">
+          <div class="card-body  d-flex flex-column justify-content-end">
+            <h4><span class="title">{{title}}</span></h4>
+            <ul class="list-unstyled">
+              <li>Titolo Originale : {{titleOrg}}</li>
+              <li>Lingua : {{lingua}} <img src="assets/img/{{nazione}}" alt="nazione"></li>
+              <li>Voto : <span class="cGold">{{{voto}}}</span></li>
+            </ul>
+          </div>
+        </div>
+    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="assets/js/myscript.js" charset="utf-8"></script>
   </body>
