--- a/index.html
+++ b/index.html
@@ -1,68 +1,77 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.2/handlebars.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
-    <link rel="stylesheet" href="assets/css/master.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+    />
+    <link rel="stylesheet" href="assets/css/master.css" />
   </head>
   <body>
     <div class="container-fluid">
       <!-- search bar -->
-      <div class="row justify-content-center align-items-center pads">
-        <div class="col-6 d-flex flex-nowrap">
-          <input id="cerca" type="text" placeholder="Titolo film">
+      <header class="row justify-content-between align-items-center">
+        <div class="col-3">
+          <img
+            src="https://fontmeme.com/permalink/191126/05ca74b1a99637327ffdce1baa652399.png"
+            alt=""
+          />
+        </div>
+        <div class="col-3 d-flex flex-nowrap">
+          <input id="cerca" type="text" placeholder="Titolo film" />
           <button id="invia" type="button" class="btn btn-light">Cerca</button>
         </div>
-      </div>
+      </header>
       <h1>Movies</h1>
-      <div id="films" class="row justify-content-center pads">
-      </div>
+      <div
+        id="films"
+        class="row flex-column justify-content-center pads "
+      ></div>
       <h1>Tv Series</h1>
-      <div id="tvSeries" class="row justify-content-center pads">
-      </div>
+      <div
+        id="tvSeries"
+        class="row flex-column justify-content-center pads"
+      ></div>
     </div>
     <!-- template -->
     <script id="movies" type="text/x-handlebars-template">
-      <!-- <div class='{{classname}} '>
-          <img src ='https://image.tmdb.org/t/p/w500/{{img}}' alt=''>
-          <h3><span class="title">{{title}}</span></h3>
-          <ul class="list-unstyled">
-            <li>Titolo Originale : {{titleOrg}}</li>
-            <li>Lingua : {{lingua}}</li>
-            <li>Voto : {{voto}}</li>
-          </ul>
-          <span class="author">{{name}}</span>
-          <span class="year">{{anno}}</span>
-      </div> -->
 
-      <div class="card" style="width: 20rem;">
-          <img src="https://image.tmdb.org/t/p/w500/{{img}}" class="card-img-top" alt="image not found">
-          <div class="card-body  d-flex flex-column justify-content-end">
-            <h4><span class="title">{{title}}</span></h4>
-            <ul class="list-unstyled">
-              <li>Titolo Originale : {{titleOrg}}</li>
-              <li>Lingua : {{lingua}} <img src="assets/img/{{nazione}}" alt="nazione"></li>
-              <li>Voto : <span class="cGold">{{{voto}}}</span></li>
-            </ul>
-          </div>
+      <div class="cardBody text-white" style='background-image: url("https://image.tmdb.org/t/p/w500{{img}}");''>
+        <div class="box">
+          <h4><span class="card-title">{{title}}</span></h4>
+          <ul class="list-unstyled">
+            <li class="card-text">Titolo Originale : {{titleOrg}}</li>
+            <li class="card-text">Lingua : {{lingua}} <img src="assets/img/{{nazione}}" alt="nazione"></li>
+            <li class="card-text">Voto : <span class="cGold">{{{voto}}}</span></li>
+            <li class="card-text">Trama : {{trama}}</li>
+          </ul>
         </div>
+      </div>
     </script>
+
     <script id="tvs" type="text/x-handlebars-template">
-      <div class="card" style="width: 20rem;">
-          <img src="https://image.tmdb.org/t/p/w500/{{img}}" class="card-img-top" alt="image not found">
-          <div class="card-body  d-flex flex-column justify-content-end">
-            <h4><span class="title">{{title}}</span></h4>
+      <div class="cardBody text-white" style='background-image: url("https://image.tmdb.org/t/p/w500{{img}}");''>
+        <div class="box">
+            <h4><span class="card-title">{{title}}</span></h4>
             <ul class="list-unstyled">
-              <li>Titolo Originale : {{titleOrg}}</li>
-              <li>Lingua : {{lingua}} <img src="assets/img/{{nazione}}" alt="nazione"></li>
-              <li>Voto : <span class="cGold">{{{voto}}}</span></li>
+              <li class="card-text">Titolo Originale : {{titleOrg}}</li>
+              <li class="card-text">Lingua : {{lingua}} <img src="assets/img/{{nazione}}" alt="nazione"></li>
+              <li class="card-text">Voto : <span class="cGold">{{{voto}}}</span></li>
+              <li class="card-text">Trama : {{trama}}</li>
             </ul>
           </div>
-        </div>
+      </div>
+      
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="assets/js/myscript.js" charset="utf-8"></script>
