New ways learned from  giovanni

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </script>
 
-    <script id="tvs" type="text/x-handlebars-template">
+    <!-- <script id="tvs" type="text/x-handlebars-template">
       <div class="cardBody text-white" style='background-image: url("https://image.tmdb.org/t/p/w500{{img}}");''>
         <div class="box">
             <h4><span class="card-title">{{title}}</span></h4>
@@ -72,7 +72,7 @@
           </div>
       </div>
       
-    </script>
+    </script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="assets/js/myscript.js" charset="utf-8"></script>
   </body>
