added background image that takes the element hovered img

--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
         </div>
         <div class="col-3 d-flex flex-nowrap">
           <input id="cerca" type="text" placeholder="Titolo film" />
-          <button id="invia" type="button" class="btn btn-light">Cerca</button>
+          <button id="invia" type="button" class="btn btn-danger">Cerca</button>
         </div>
       </header>
+      <div class="wrapper">
+        
+      </div>
       <h1>Movies</h1>
       <div
         id="films"
