changed AjaxCall for tv and movies, cleaned the code ans some minor changes

--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
           <button id="invia" type="button" class="btn btn-danger">Cerca</button>
         </div>
       </header>
-      <div class="wrapper">
-        
-      </div>
+      <div id="backBg"></div>
       <h1>Movies</h1>
       <div
         id="films"
